# ros_can_fd

can_msgs/: CMakeLists.txt
can_msgs/msg/: FD_Frame.msg
ros_canfd/: CMakeLists.txt  READEE.md  package.xml
ros_canfd/include/ros_canfd/: can_fd_bridge.h
ros_canfd/src/: can_fd_bridge.cpp  can_fd_dump.cpp
